# telephony_telephony_cangjie_wrapper

./: .gitignore  BUILD.gn  README.md  README_zh.md  bundle.json
kit/TelephonyKit/: BUILD.gn  index.cj
mock/: ohos.telephony.call.cj  ohos.telephony.cj  ohos.telephony.observer.cj  ohos.telephony.radio.cj
ohos/telephony/: BUILD.gn  telephony.cj
ohos/telephony/call/: BUILD.gn  call.cj  number_format_options.cj  telephony_call.cj  telephony_call_ffi.cj
ohos/telephony/observer/: BUILD.gn  telephony_observer.cj  telephony_observer_common.cj  telephony_observer_ffi.cj
ohos/telephony/radio/: BUILD.gn  telephony_radio.cj  telephony_radio_common.cj  telephony_radio_ffi.cj
test/APILevel21/telephony_call/test/: .gitignore
test/APILevel21/telephony_call/test/entry/: .gitignore
test/APILevel21/telephony_call/test/entry/src/main/cangjie/src/: Test_telephony_call.cj  ability_stage.cj  index.cj
test/APILevel21/telephony_call/test/hvigor/: hvigor-config.json5
test/APILevel22/telephony_call/test/entry/src/main/cangjie/src/: Test_telephony_call.cj  main_ability.cj  test_list_telephony_call.cj
test/telephony_call/test/: profile.json
test/telephony_call/test/entry/src/main/cangjie/src/: Test_call_format_phone_number_add.cj  Test_call_format_phone_number_to_e164_add.cj  Test_call_is_emergency_phone_number_add.cj  Test_call_make_call_add.cj  Test_emergency_number_options_add.cj  Test_number_format_options_add.cj  Test_telephony_call.cj  ability_stage.cj  index.cj  test_list_telephony_call.cj
test/telephony_call/test/hvigor/: hvigor-config.json5
