# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

telephony_cangjie_wrapper_packages_ohos = [
  "//base/telephony/telephony_cangjie_wrapper/ohos/telephony/call:ohos.telephony.call",
  "//base/telephony/telephony_cangjie_wrapper/ohos/telephony/observer:ohos.telephony.observer",
  "//base/telephony/telephony_cangjie_wrapper/ohos/telephony/radio:ohos.telephony.radio",
  "//base/telephony/telephony_cangjie_wrapper/ohos/telephony:ohos.telephony",
]
telephony_cangjie_wrapper_packages_kit = [ "//base/telephony/telephony_cangjie_wrapper/kit/TelephonyKit:kit.TelephonyKit" ]
copy_ohos_cangjie_sdk_api_lib("copy_sdk_telephony_cangjie_libs") {
  ohos_inputs = telephony_cangjie_wrapper_packages_ohos
  kit_inputs = telephony_cangjie_wrapper_packages_kit
}
