# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.telephony_call") {
  sources = [
    "number_format_options.cj",
    "telephony_call.cj",
    "telephony_call_ffi.cj",
  ]

  cj_external_deps = [
    "ability_cangjie_wrapper:ohos.ability",
    "arkui_cangjie_wrapper:ohos.base",
    "cangjie_ark_interop:ohos.ffi",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "cangjie_ark_interop:ohos.encoding.json",
    "cangjie_ark_interop:ohos.labels",
  ]

  external_deps = [ "call_manager:cj_telephony_call_ffi" ]

  subsystem_name = "telephony"
  part_name = "telephony_cangjie_wrapper"
  lib_name = "ohos.telephony_call"
}
